tests/purs/failing/LocalTypeSynonyms.out
Error found:
at tests/purs/failing/LocalTypeSynonyms.purs:7:3 - 7:21 (line 7, column 3 - line 7, column 21)

   A cycle appears in a set of type synonym definitions:

    {[33mT1[0m, [33mT2[0m}

  Cycles are disallowed because they can lead to loops in the type checker.
  Consider using a 'newtype' instead.


See https://github.com/purescript/documentation/blob/master/errors/CycleInTypeSynonym.md for more information,
or to contribute content related to this error.

